--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -10,9 +10,9 @@
   <li class="nav-item">
     <%= link_to "取引一覧",rooms_path, class: 'nav-link text-dark' %>
   </li>
-  <li class="nav-item">
-    <%= link_to "シェアホビとは？",about_path, class: 'nav-link text-dark' %>
-  </li>
+  <!--<li class="nav-item">-->
+    <!--<%#= link_to "遊び方",guide_path, class: 'nav-link text-dark' %> -->
+  <!--</li>-->
   <li class="nav-item">
     <%= link_to "問い合わせ",new_contact_path, class: 'nav-link text-dark' %>
   </li>
