--- a/app/views/members/contacts/new.html.erb
+++ b/app/views/members/contacts/new.html.erb
@@ -9,12 +9,12 @@
           <%= f.label :タイトル %>
           <%= f.text_field :title, class:"form-control" %>
         </div>
-        <div class="form-group">  
+        <div class="form-group">
           <%= f.label :内容 %>
           <%= f.text_area :body,rows:"5", class:"form-control" %>
         </div>
         <div class="form-group">
-          <%= f.submit "送信",class:"btn btn-outline-dark btn-bolck" %>
+          <%= f.submit "送信",class:"btn btn-outline-dark btn-bolck" ,"data-confirm" => "問い合わせ内容は間違いありませんか？"%>
         </div>
       <% end %>
     </div>
