--- a/app/views/members/rates/new.html.erb
+++ b/app/views/members/rates/new.html.erb
@@ -1,6 +1,6 @@
+<% if @request.is_active == "in_review" %>
 <div class="container mt-3">
   <div class="row">
-    <%# binding.pry %>
     <div class="h4"><%= @member.nickname %>さんとの取引評価</div>
   </div>
   <div class="row mt-3">
@@ -21,3 +21,7 @@
     </div>
   </div>
 </div>
+<% else %>
+<div></div>
+<% end %>
+
