--- a/app/views/members/requests/tagshow.html.erb
+++ b/app/views/members/requests/tagshow.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 　<div class="row">
-    <h4> #<%= @tag.name %></h4>
+    <h5><strong>"#<%= @tag.name %>"</strong>がつけられている投稿</h5>　：<%= @requests.count %>件
   </div>
   <div class="row">
   <% @requests.each do |req| %>
