--- a/app/views/members/members/show.html.erb
+++ b/app/views/members/members/show.html.erb
@@ -22,6 +22,7 @@
           <div class="col">
             <%= link_to main_path(@member) ,class:"text-dark" do %>
               <%= @requests.count %></br>
+              <%# binding.pry %>
               <small>投稿数</small>
             <% end %>
           </div>
