--- a/app/views/members/requests/show.html.erb
+++ b/app/views/members/requests/show.html.erb
@@ -23,12 +23,12 @@
              <th><%= safe_join(@request.content.split("\n"),tag(:br)) unless @request.content.nil? %></th>
            </tr>
            <tr>
-             <th><%= "ステータス 最後に消す！" %></th>
-             <th><%= @request.is_active_i18n %></th>
-           </tr>
-           <tr>
              <th><%= "タグ" %></th>
              <th><%= render_with_tags(@request.caption) %></th>
+           </tr>
+           <tr>
+             <th><%= "ステータス" %></th>
+             <th><%= @request.is_active_i18n %></th>
            </tr>
           </tbody>
         </table>
