[update]admin contact状態追加

--- a/app/views/admins/contacts/edit.html.erb
+++ b/app/views/admins/contacts/edit.html.erb
@@ -31,7 +31,7 @@
     <%= f.text_area :reply, rows:"5", class:"form-control", placeholder: "返信内容" %>
   </div>
   <div class="row mt-3 mb-3">
-    <%= f.submit "返信",class:"btn btn-outline-dark btn-bolck","data-confirm" => "返信内容に間違いありませんか？ %>
+    <%= f.submit "返信",class:"btn btn-outline-dark btn-bolck", "data-confirm" => "返信内容に間違いありませんか？" %>
     <% end %>  
   </div>
 </div>  
