--- a/app/views/admins/contacts/index.html.erb
+++ b/app/views/admins/contacts/index.html.erb
@@ -1,6 +1,12 @@
 <div class="container">
   <div class="row">
-      <h4 class="my-3">問い合わせ一覧</h4>
+     <h4 class="my-3">問い合わせ一覧</h4>
+    <div class="col my-3">
+      <%= form_with url: admins_contacts_path, method: :get , local: true do |f| %>
+        <%= f.select :column, options_for_select({"対応済み" => "true","未対応" => "false" }),include_blank: "全てを表示",class:"form-control" %>
+        <%= f.submit  %>
+      <% end %>
+    </div>
     <table class="table table-hover table-inverse">
       <thead>
         <tr>
@@ -19,8 +25,14 @@
           <td><%= contact.member.email %></td>
           <td><%= contact.title.truncate(10) %></td>
           <td><%= contact.created_at.strftime("%Y年%m月%d日") %></td>
-          <td><%= contact.reply_status %></td>
-          <td><%= link_to "返信", edit_admins_contact_path(contact)  %></td
+          <td>
+            <% if contact.reply_status == true %>
+              対応済み
+            <% else %>
+              未対応
+            <% end %>  
+          </td>
+          <td><%= link_to "返信", edit_admins_contact_path(contact)  %></td>
         </tr>
         <% end %>
       </tbody>
