[update]README＆お気に入り一覧情報取得

--- a/app/views/members/homes/top.html.erb
+++ b/app/views/members/homes/top.html.erb
@@ -1,7 +1,9 @@
 <div class="top-image">
   <div class="container">
     <div class="row justify-content-end pt-5" >
-       <%= link_to "ログイン", new_member_session_path, class: 'btn btn-outline-dark' %>
+       <div><%= link_to "ログイン", new_member_session_path, class: 'btn btn-outline-dark mr-3' %></div>
+       <div></div>
+       <div><%= link_to "サイトについて", about_path, class: 'btn btn-outline-dark' %></div>
     </div>
     <div class="row justify-content-center" style="padding-top: 150px;">
       <div class="display-2">Sharehobby</div>
