--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -48,7 +48,7 @@
           </li>
           <li class="nav-item">
             <%= link_to likes_index_path, class: 'nav-link text-dark' do %>
-              <i class="fas fa-heart fa-2x"></i>
+              <i class="far fa-heart fa-2x"></i>
             <% end %>
           </li>
           <li class="nav-item ">
