--- a/app/views/members/likes/index.html.erb
+++ b/app/views/members/likes/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container mt-3 px-0">
+  <% if @requests.present? %>
   <div class="row">
     <div class="h4">お気に入り一覧</div>
   </div>
-  <% if @requests.present? %>
   <div class="row">
     <% @requests.each do |req| %>
     <!--<%# if req.is_active == "release" && req.member != current_member.id %>-->
@@ -38,7 +38,7 @@
   <div class="row  mt-3 mb-3 justify-content-center"> <%= paginate @requests %></div>
   <% else %>
   <div class="row">
-    <p>取引ができる投稿はありません。</p>
+    <p>お気に入りはありません。</p>
   </div>
   <% end %>
 </div>
