--- a/app/views/members/members/show.html.erb
+++ b/app/views/members/members/show.html.erb
@@ -1,5 +1,6 @@
 <div class="container mt-3 mb-3 px-0">
-  <div class="card mt-5">
+  <div class="row justify-content-center">
+  <div class="col-lg-8 card mt-5 ">
     <div class="row">
       <div class="col-4 pt-3 ml-3">
           <%= attachment_image_tag @member, :image,fallback: "noimage.jpg",size:"180x180" ,class:"rounded-circle border border-dark"%>
@@ -58,6 +59,7 @@
         </tbody>
       </table>
     </div>
+  </div>
   </div>
 </div>
 
