--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,39 +19,32 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <% if current_page?(root_path) %>
   <body>
-    <%= yield %>
-  </body>
-  <% else %>
-  <body>
+    <% if current_page?(root_path) %>
+    <main>
+      <%= yield %>
+    </main>
+    
+    <% else %>
+    
     <header class="header">
       <%= render 'layouts/header' %>
     </header>
 
     <main class="main">
-      <div class="container" >
-        <div class="row">
-          <div class="col-2 mt-3 ">
-            <%= render 'layouts/sidebar' %>
-          </div>
-          <div class="offset-1 mt-3"></div>
-          <div class="col-8 mt-3">
-            <div class="text-dark">
-              <%= flash[:success] %>
-            </div>
-            <div class="text-danger">
-              <%= flash[:error] %>
-            </div>
-             <%= yield %>
-          </div>
-        </div>
+      <div class="text-dark">
+       <%= flash[:success] %>
       </div>
+      <div class="text-danger">
+        <%= flash[:error] %>
+      </div>
+      <%= yield %>
     </main>
 
     <footer class="footer">
       <%= render 'layouts/footer' %>
     </footer>
+    
+    <% end %>
   </boby>
-  <% end %>
 </html>
