--- a/app/views/members/likes/index.html.erb
+++ b/app/views/members/likes/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-3 px-0">
+<div class="container mt-5">
   <% if @requests.present? %>
   <div class="row">
     <div class="h4">お気に入り一覧</div>
@@ -37,8 +37,8 @@
   </div>
   <div class="row  mt-3 mb-3 justify-content-center"> <%= paginate @requests %></div>
   <% else %>
-  <div class="row">
-    <p>お気に入りはありません。</p>
+  <div class="row justify-content-center">
+    <div class="h3">お気に入りした投稿はありません</div>
   </div>
   <% end %>
 </div>
