--- a/app/views/members/rates/new.html.erb
+++ b/app/views/members/rates/new.html.erb
@@ -1,9 +1,9 @@
 <% if @request.is_active == "in_review" %>
-<div class="container mt-3">
+<div class="container mt-5">
   <div class="row">
     <div class="h4"><%= @member.nickname %>さんとの取引評価</div>
   </div>
-  <div class="row mt-3">
+  <div class="row mt-3 justify-content-center">
     <div class="col-10">
       <%= form_with model:[@request, @rate], local:true do |f| %>
         <div class="form-group ">
