--- a/app/views/members/contacts/new.html.erb
+++ b/app/views/members/contacts/new.html.erb
@@ -1,8 +1,8 @@
-<div class="container mt-3">
+<div class="container mt-5">
   <div class="row">
     <div class="h4">お問い合わせフォーム</div>
   </div>
-  <div class="row">
+  <div class="row justify-content-center">
     <div class="col-10">
       <%= form_with model: @contact, url: contacts_path, local:true do |f| %>
         <div class="form-group">
