--- a/app/views/members/requests/_tag.html.erb
+++ b/app/views/members/requests/_tag.html.erb
@@ -1,5 +1,5 @@
   <li class="nav-item dropdown">
-    <div class="nav-link dropdown-tggle" data-toggle="dropdown">タグ一覧</div>
+    <div class="nav-link dropdown-tggle nav-link text-dark" data-toggle="dropdown">タグ一覧</div>
       <div class="dropdown-menu">
         <% @set_tags.sort.reverse.each do |tag| %>
           <%# count[1].each do |tag| %>
