--- a/app/views/members/requests/tagshow.html.erb
+++ b/app/views/members/requests/tagshow.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="row">
   <% @requests.each do |req| %>
-    <div class="col-6 mt-3">
+    <div class="col-sm col-lg-4 mt-3">
       <div class="card " style="width: 20rem;">
         <div class="card-body text-center ">
           <div><%= attachment_image_tag req.member, :image, fallback: "noimage.jpg",size:"35x35" ,class:"rounded-circle border border-dark"%></div>
