--- a/app/views/members/rooms/index.html.erb
+++ b/app/views/members/rooms/index.html.erb
@@ -2,6 +2,16 @@
   <% if @rooms.exists? %>
   <div class="row">
     <div class="h4">取引一覧</div>
+    <!--<%#= form_with url: rooms_path, method: :get , local: true do |f| %>-->
+    <!--  <div class="input-group">-->
+    <!--    <div class="input-group-append">-->
+    <!--      <%#= f.select :column, options_for_select({"取引中" => "in_transaction","評価中" => "in_review","取引終了" =>"end_transaction" }),include_blank: "全て",class:"form-control" %>-->
+    <!--    </div>  -->
+    <!--    <div class="input-group-append">-->
+    <!--      <button class="btn btn-outline-dark" type="submit" id="button-addon2"><i class="fas fa-search"></i></button>-->
+    <!--    </div>-->
+    <!--  </div> -->
+    <!--<%# end %>-->
   </div>
   <div class="row">
     <table class="table table-hover table-inverse">
