--- a/app/views/members/searches/search.html.erb
+++ b/app/views/members/searches/search.html.erb
@@ -16,7 +16,7 @@
   </div>
   <div class="row">
     <% @members.each do |member| %>
-    <div class="col-6 mt-3">
+    <div class="col-sm col-lg-4 mt-3">
       <div class="card " style="width: 20rem;">
         <div class="card-body text-center ">
            <div><%= attachment_image_tag member, :image, fallback: "noimage.jpg",size:"50x50" ,class:"rounded-circle border border-dark"%></div>
@@ -65,7 +65,7 @@
   </div>
   <div class="row">
     <% @requests.each do |req| %>
-    <div class="col-6 mt-3">
+    <div class="col-sm col-lg-4 mt-3">
       <div class="card " style="width: 20rem;">
         <div class="card-body text-center ">
           <div><%= attachment_image_tag req.member, :image, fallback: "noimage.jpg",size:"50x50" ,class:"rounded-circle border border-dark"%></div>
