--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,7 @@
         <ul class="navbar-nav">
         <% if admin_signed_in? %>
           <li class="nav-item ">
-            <%= link_to "管理者側会員一覧",admins_members_path, class: 'nav-link text-danger' %>
+            <%= link_to "会員一覧",admins_members_path, class: 'nav-link text-danger' %>
           </li>
           <li class="nav-item ">
             <%= link_to "問い合わせ一覧",admins_contacts_path, class: 'nav-link text-danger' %>
