--- a/app/views/admins/contacts/edit.html.erb
+++ b/app/views/admins/contacts/edit.html.erb
@@ -1,6 +1,8 @@
-<div class="container">
+<div class="container mt-5">
   <div class="row">
-    <h4 class="my-5">返信フォーム</h4>
+    <div class="h4">返信フォーム</div>
+  </div>
+  <div class="row">
     <table class="table table-hover table-inverse">
       <thead>
         <tr>
