--- a/app/views/admins/members/index.html.erb
+++ b/app/views/admins/members/index.html.erb
@@ -1,7 +1,8 @@
-<div class="container ">
+<div class="container mt-5">
   <div class="row">
-      <h4 class="my-3">会員一覧</h4>
-
+    <div class="h4">会員一覧</div>
+  </div>
+  <div class="row">
       <table class="table table-hover table-inverse">
         <thead>
           <tr>
@@ -15,13 +16,13 @@
         <tbody>
           <tr>
             <td><%= member.id %></td>
-            <td><%= link_to member.nickname, admins_member_path(member) %></td>
+            <td><%= link_to member.nickname, admins_member_path(member) ,class:"text-dark" %></td>
             <td nowrap><%= member.email %></td>
             <td>
               <% if member.is_deleted? %>
-                <span class="text-secondary font-weight-bold">退会</span>
+                <span class="text-danger font-weight-bold">退会</span>
               <% else %>
-                <span class="text-success font-weight-bold">有効</span>
+                <span class="text-dark font-weight-bold">有効</span>
               <% end %>
             </td>
           </tr>
