--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,11 +32,15 @@
     </header>
 
     <main class="main">
-      <div class="text-dark">
-       <%= flash[:success] %>
-      </div>
-      <div class="text-danger">
-        <%= flash[:error] %>
+      <div class="container mt-3">
+        <div class="row">
+          <div class="text-dark">
+           <%= flash[:success] %>
+          </div>
+          <div class="text-danger">
+            <%= flash[:error] %>
+          </div>
+        </div>
       </div>
       <%= yield %>
     </main>
