--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,7 +45,7 @@
 
 // ページ全体の背景色とフォント設定
 body{
- font-family: 'Comfortaa', cursive;
+ // font-family: 'Comfortaa', cursive;
  font-family: 'RocknRoll One', sans-serif;
  background-color: #fff8cf;
 }
