--- a/app/assets/stylesheets/members/homes.scss
+++ b/app/assets/stylesheets/members/homes.scss
@@ -11,6 +11,12 @@
 //   ;
 // }
 
-about-content{
-  height: 500px;
+.about-head{
+  height: 300px;
+  background-color: #f7efa2;
+  border-top: ;
+}  
+.about-content{
+  height: 400px;
+  margin-top: 20px;
 }
