--- a/app/views/members/homes/about.html.erb
+++ b/app/views/members/homes/about.html.erb
@@ -1,13 +1,44 @@
+ <div class="row about-head justify-content-center mb-3">
+    <div class="col text-center mt-3 px-0">
+      <div class="h3">趣味を楽しみましょう!</div><br>
+      sharehobbyは「趣味」を楽しんでいただくためのサービスです。
+      
+      
+      
+
+    </div>
+  </div>
 <div class="container">
   <div class="row about-content">
-
+    <div class="col-5">
+      <div class="display-4">step1</div>
+    </div>
+    <div class="col-7 border">
+      
+    </div>
   </div>
   
   <div class="row about-content">
-    b　
+    <div class="col-7 border"></div>
+    <div class="col-5">
+      <div class="display-4">step2</div>
+    </div>
   </div>
   
   <div class="row about-content">
-    x　
+    <div class="col-5">
+      <div class="display-4">step3</div>
+    </div>
+    <div class="col-7 border">
+      
+    </div>
   </div>
+  
+  <div class="row about-content">
+    <div class="col-7 border"></div>
+    <div class="col-5">
+      <div class="display-4">step4</div>
+    </div>
+  </div>
+  
 </div>
